Icones adicionados no html

--- a/carrinho.html
+++ b/carrinho.html
@@ -16,9 +16,9 @@
         <h1 id = "titulo">BooksLux</h1>
         <nav id = "navega">
             <ul>
-                <li><a href="index.html">Livros</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="login.html">Log in</a></li>
+                <li><a href="index.html"><i class="bi bi-book-fill"></i>Livros</a></li>
+                <li><a href="sobre.html"><i class="bi bi-journal-text"></i>Sobre</a></li>
+                <li><a href="login.html"><i class="bi bi-person-circle"></i>Log in</a></li>
                 <li><a href="carrinho.html"><i id = "carrinho" class="bi bi-cart-check-fill"></i>Carrinho</a></li>
             </ul>
         </nav>
