--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <h1 id = "titulo">BooksLux</h1>
             <nav id = "navega">
                 <ul>
-                    <li><a href="index.html">Livros</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="login.html">Log in</a></li>
+                    <li><a href="index.html"><i class="bi bi-book-fill"></i>Livros</a></li>
+                    <li><a href="sobre.html"><i class="bi bi-journal-text"></i>Sobre</a></li>
+                    <li><a href="login.html"><i class="bi bi-person-circle"></i>Log in</a></li>
                     <li><a href="carrinho.html"><i id = "carrinho" class="bi bi-cart-check-fill"></i>Carrinho</a></li>
                 </ul>
             </nav>
@@ -31,35 +31,35 @@
                         <img src="_imagens/admchiavenato.png" alt="admch">
                         <h3 class = "titulo-livro">Princípios da Administração</h3>
                         <p class = "autor"> <b>Por:</b> Chiavenato</p>
-                        <p class = "valor">R$ 19,99</p>
+                        <p class = "valor">R$ 19,99 <input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" onclick="adicionaCarrinho('admchiavenato.png')" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class ="livro">
                         <img src="_imagens/administração.png" alt="adm">
                         <h3 class="titulo-livro">Administração Estratégica </h3>
                         <p class="autor"> <b>Por:</b> Djalma De Pinho </p>
-                        <p class="valor">R$ 19,99</p>
+                        <p class="valor">R$ 19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class ="livro">
                         <img src="_imagens/marketing4.png" alt="mkt5">
                         <h3 class="titulo-livro">Marketing 4.0</h3>
                         <p class="autor"> <b>Por:</b> Philip Kotler</p>
-                        <p class="valor">R$ 19,99</p>
+                        <p class="valor">R$ 19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class ="livro">
                         <img src="_imagens/marketing5.png" alt="mkt4">
                         <h3 class="titulo-livro">Marketing 4.0</h3>
                         <p class="autor"> <b>Por:</b> Philip Kotler </p>
-                        <p class="valor">R$ 19,99</p>
+                        <p class="valor">R$ 19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class ="livro">
                         <img src="_imagens/inteligencia.jpg" alt="adm">
                         <h3 class="titulo-livro">Inteligência Emocional</h3>
                         <p class="autor"> <b>Por:</b> Daniel Goleman</p>
-                        <p class="valor">R$ 19,99</p>
+                        <p class="valor">R$ 19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                 </div>
@@ -69,35 +69,35 @@
                         <img src="_imagens/ativesuamente.png" alt="">
                         <h3 class="titulo-livro">Ative sua mente</h3>
                         <p class="autor"> <b>Por: </b> Arnoni Caldart</p>
-                        <p class="valor"> R$19,99</p>
+                        <p class="valor"> R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/cem bilhoes de neuronios.jpg" alt="">
                         <h3 class="titulo-livro">Cem bilhões de neurônios?</h3>
                         <p class="autor"> <b>Por: </b> Roberto Lent </p>
-                        <p class="valor">R$19,99</p>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/habitos atomicos.jpg" alt="">
                         <h3 class="titulo-livro">Hábitos Atômicos</h3>
                         <p class="autor"> <b>Por: </b> James Clear</p>
-                        <p class="valor">R$19,99</p>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/Psicologia.jpg" alt="">
                         <h3 class="titulo-livro">Psicologia: neurociência e comportamentos</h3>
                         <p class="autor"> <b>Por: </b> Hérica Landi & Lorrane Ribeiro </p>
-                        <p class="valor">R$19,99</p>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/poderdohabito.png" alt="">
                         <h3 class="titulo-livro">O poder do hábito</h3>
                         <p class="autor"> <b>Por: </b> Charles Duhigg</p>
-                        <p class="valor">R$19,99</p>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                 </div>
@@ -107,35 +107,35 @@
                         <img src="_imagens/hardware.png" alt="">
                         <h3 class="titulo-livro">Hardware</h3>
                         <p class="autor"> <b>Por: </b> Carlos B Morimoto</p>
-                        <p class="valor"> R$19,99</p>
+                        <p class="valor"> R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/python.jpg" alt="">
                         <h3 class="titulo-livro">Python</h3>
                         <p class="autor"> <b>Por:</b> Nilo Ney C </p>
-                        <p class="valor"> R$19,99</p>
+                        <p class="valor"> R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/logica.jpg" alt="">
                         <h3 class="titulo-livro">Logica de programação</h3>
                         <p class="autor"> <b>Por: </b> Paulo Silveira </p>
-                        <p class="valor"> R$19,99</p>
+                        <p class="valor"> R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/redes.jpg" alt="">
                         <h3 class="titulo-livro">Redes</h3>
                         <p class="autor"> <b>Por: </b> Andrew, Nick & David </p>
-                        <p class="valor"> R$19,99</p>
+                        <p class="valor"> R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/universodaprogamação.jpg" alt="">
                         <h3 class="titulo-livro">Universo da programação</h3>
                         <p class="autor"> <b>Por: </b> William Oliveira</p>
-                        <p class="valor"> R$19,99</p>
+                        <p class="valor"> R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                 </div>
@@ -145,35 +145,35 @@
                         <img src="_imagens/dom-casmurro-8.jpg" alt="">
                         <h1 class="titulo-livro">Dom Casmurro</h1>
                         <p class="autor"> <b>Por: </b> Machado de Assis</p>
-                        <p class="valor">R$19,99</p>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/domquixote.jpg" alt="">
                         <h1 class="titulo-livro">Dom quixote</h1>
                         <p class="autor"> <b>Por: </b> Miguel Cervantes</p>
-                        <p class="valor">R$19,99</p>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/frankestein.jpg" alt="">
                         <h1 class="titulo-livro">Frankenstein</h1>
                         <p class="autor"> <b>Por: </b> Mary Shelly </p>
-                        <p class="valor">R$19,99</p>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/cortiço.jpg" alt="">
                         <h1 class="titulo-livro">O cortiço</h1>
                         <p class="autor"> <b>Por: </b> Aluíso Azevedo</p>
-                        <p class="valor">R$19,99</p>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/pequenoprincipe.jpg" alt="">
                         <h1 class="titulo-livro">O pequeno príncipe</h1>
                         <p class="autor"> <b>Por: </b> Antoine D</p>
-                        <p class="valor">R$19,99</p>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                 </div>
@@ -183,35 +183,35 @@
                         <img src="_imagens/jujutsu.jpg" alt="">
                         <h1 class="titulo-livro">Jujutsu Kaisen</h1>
                         <p class="autor"> <b>Por: </b> Gege, Akutami </p>
-                        <p class="valor">R$19,99</p>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/hunterhunter.png" alt="">
                         <h1 class="titulo-livro">Hunter X Hunter</h1>
                         <p class="autor"> <b>Por: </b> Yoshihiro Togashi</p>
-                        <p class="valor">R$19,99</p>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/chaisawnman.png" alt="">
                         <h1 class="titulo-livro">Chaisawn Man</h1>
                         <p class="autor"> <b>Por: </b> Tatsuki Fujimoto</p>
-                        <p class="valor">R$19,99</p>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/mobpyscho100.png" alt="">
                         <h1 class="titulo-livro">Mob Pyscho 100</h1>
                         <p class="autor"> <b>Por: </b> One</p>
-                        <p class="valor">R$19,99</p>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/onepunch.png" alt="">
                         <h1 class="titulo-livro">One Punch Man</h1>
                         <p class="autor"> <b>Por: </b> Yusuke Murata</p>
-                        <p class="valor">R$19,99</p>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
                         <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                 </div>
