--- a/sobre.html
+++ b/sobre.html
@@ -7,6 +7,7 @@
     <link rel ="shortcut icon" type ="image/png" href = "_imagens/icone.ico">
     <link rel = "stylesheet" type ="text/css" href = "_css/style.css">
     <link rel="stylesheet" href="_css/sobre.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <div id = "principal">    
@@ -15,12 +16,14 @@
             <h1 id = "titulo">BooksLux</h1>
             <nav id = "navega">
                 <ul>
-                    <li><a href="index.html">Livros</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="login.html">Log in</a></li>
+                    <li><a href="index.html"><i class="bi bi-book-fill"></i>Livros</a></li>
+                    <li><a href="sobre.html"><i class="bi bi-journal-text"></i>Sobre</a></li>
+                    <li><a href="login.html"><i class="bi bi-person-circle"></i>Log in</a></li>
+                    <li><a href="carrinho.html"><i id = "carrinho" class="bi bi-cart-check-fill"></i>Carrinho</a></li>
                 </ul>
             </nav>
         </header>
+
         <section id = "sessao-sobre">
             <h1>QUEM SOMOS?</h1>
             <h1>NOSSO OBJETIVO</h1>
