--- a/sobre.html
+++ b/sobre.html
@@ -26,12 +26,130 @@
 
         <section id = "sessao-sobre">
             <h1>QUEM SOMOS?</h1>
+            <p>A BookLux é uma empresa inovadora no ramo de venda de livros, que possui um
+                modelo de negócio único. Somos uma equipe apaixonada por literatura e comprometida em
+                proporcionar acesso amplo e democrático aos livros, promovendo a leitura e o conhecimento em todo o Brasil.</p>
             <h1>NOSSO OBJETIVO</h1>
+            <p>Nosso principal objetivo é facilitar o acesso à leitura para todos os brasileiros, oferecendo
+                uma ampla variedade de livros de diferentes gêneros e temáticas, com frete grátis para todo o
+                país. Acreditamos que a leitura é fundamental para o desenvolvimento pessoal e intelectual
+                de cada indivíduo, e nosso objetivo é tornar essa experiência mais acessível e conveniente
+                para todos.
+                Para alcançar esse objetivo, buscamos oferecer uma ampla variedade de livros, abrangendo
+                diferentes gêneros, temáticas e níveis de leitura. Queremos atender às necessidades e
+                interesses de todos os leitores, desde estudantes em busca de materiais acadêmicos até
+                amantes da literatura em busca de obras clássicas e contemporâneas</p>
             <h1>DIFERENCIAL</h1>
+            <p>O diferencial da BookLux está na nossa missão de democratizar o acesso à leitura no
+                Brasil. Queremos ir além de ser apenas uma loja de livros online, e nos esforçamos para
+                oferecer uma experiência única aos nossos clientes. Aqui estão alguns dos nossos
+                diferenciais:
+                <ol type = "I">
+                    <li><span>Frete grátis para todo o Brasil:</span> Sabemos que o custo do frete pode ser um obstáculo para
+                    muitos leitores, especialmente aqueles que vivem em regiões mais remotas. Por isso,
+                    oferecemos frete grátis para todo o Brasil, tornando a compra de livros mais acessível e
+                    conveniente.</li>
+
+                    <li><span>Experiência de compra segura e conveniente:</span> Nosso site foi projetado para oferecer uma
+                    experiência de compra online segura e fácil de usar. Temos medidas de segurança para
+                    proteger as informações dos clientes e garantir uma transação tranquila. Além disso,
+                    oferecemos recursos como busca avançada, avaliações de clientes e recomendações
+                    personalizadas para auxiliar os leitores na escolha dos livros.</li>
+
+                    <li><span>tendimento ao cliente de qualidade:</span> Valorizamos a satisfação dos nossos clientes e nos
+                    esforçamos para oferecer um atendimento de qualidade. Nossa equipe de suporte está
+                    disponível para auxiliar os clientes em suas dúvidas, sugestões ou problemas, buscando
+                    sempre uma solução rápida e eficiente.</li>
+
+                    <li><span>Incentivo à leitura e projetos sociais:</span> Acreditamos no poder transformador da leitura e no
+                    impacto positivo que ela pode ter na sociedade. Por isso, destinamos parte dos nossos
+                    recursos para apoiar projetos sociais relacionados à leitura, colaborando com iniciativas que promovem a inclusão literária em comunidades carentes, escolas e bibliotecas.</li>
+                </ol>
+            </p>
             <h1>MISSÃO</h1>
+            <p>A missão da BookLux é democratizar o acesso à leitura no Brasil, proporcionando uma
+                experiência de compra conveniente, variedade de títulos e promovendo projetos sociais
+                relacionados à leitura. Buscamos inspirar e transformar vidas por meio do poder dos livros,
+                incentivando a educação, a imaginação e o conhecimento.</p>
             <h1>VISÃO</h1>
+            <p>Nossa visão é ser a principal referência no mercado de venda de livros online,
+                reconhecida pelo compromisso com a qualidade, diversidade, acessibilidade e pelo apoio a
+                projetos sociais. Queremos ser a escolha preferida dos leitores brasileiros, tornando a leitura
+                uma atividade acessível para todos.</p>
             <h1>VALORES</h1>
+            <p>
+                <ol type = "I">
+                    <li><span>Acesso à leitura:</span> Acreditamos que a leitura é um direito fundamental de todos.
+                    Trabalhamos para tornar os livros acessíveis a todas as pessoas, independentemente de sua
+                    localização geográfica, condição social ou econômica.</li>
+                    
+                    <li><span>Diversidade:</span> Valorizamos a diversidade de gêneros, temáticas e autores. Buscamos
+                    oferecer uma variedade ampla de títulos para atender aos diferentes interesses e necessidades
+                    dos leitores.</li>
+
+                    <li><span>Responsabilidade social:</span> Comprometemo-nos a apoiar projetos sociais relacionados à
+                    leitura. Acreditamos no poder transformador da leitura e buscamos contribuir para a inclusão
+                    literária em comunidades carentes, escolas e bibliotecas.</li>
+
+                    <li><span>Excelência no atendimento:</span> Valorizamos a satisfação dos nossos clientes e nos esforçamos
+                    para oferecer um atendimento de qualidade, ágil e eficiente. Buscamos superar as
+                    expectativas dos clientes em todas as interações.</li>
+
+                    <li><span>Inovação:</span> Estamos sempre em busca de novas formas de melhorar a experiência de compra
+                    e leitura dos nossos clientes. Investimos em tecnologia e inovação para oferecer recursos avançados e uma jornada de leitura completa.</li>
+                </ol>
+            </p>
+            <h1>IMPORTÂNCIA DA RESPONSABILIDADE SOCIOAMBIENTAL</h1>
+            <p>
+                <ol type = "I">
+                    <li><span>Redução do Impacto Ambiental</span> Mesmo sem a produção de livros físicos, a empresa pode adotar práticas que minimizem seu impacto ambiental. Isso inclui usar servidores e centros de dados que sejam eficientes em termos de energia, promover o uso de energia renovável e compensar as emissões de carbono das operações digitais e logísticas.</li>
+
+                    <li><span>Transporte Sustentável</span>Para os livros físicos vendidos, a empresa pode escolher métodos de transporte e entrega que reduzam a pegada de carbono. Isso pode envolver parcerias com serviços de entrega mais ecológicos ou otimização de rotas para minimizar o consumo de combustível.</li>
+
+                    <li><span>Embalagens Ecológicas</span>Utilizar embalagens recicláveis e minimizadas para as entregas ajuda a reduzir o desperdício e o impacto ambiental. A empresa pode também incentivar os fornecedores a adotarem práticas sustentáveis.</li>
+
+                    <li><span>Reflorestamento e Conservação</span> A empresa pode investir em programas de reflorestamento ou conservação florestal, ajudando a compensar os impactos ambientais indiretos da indústria do livro e contribuindo para a preservação do meio ambiente.</li>
+
+                    <li><span>Educação e Conscientização</span>Como uma empresa de livros, há uma oportunidade única de promover a conscientização ambiental e social através do conteúdo que oferece. Isso pode incluir a curadoria de livros sobre sustentabilidade, mudanças climáticas e responsabilidade social, além de parcerias com autores e organizações ambientais.</li>
+
+                    <li><span>Responsabilidade Social</span>Além das questões ambientais, a empresa pode se envolver em práticas que beneficiem a sociedade, como apoiar a educação, investir em programas comunitários e garantir condições de trabalho justas e inclusivas para todos os funcionários.</li>
+
+                    <li><span>Economia Circular e Reciclagem</span> Promover a economia circular incentivando os clientes a reciclar ou doar livros após a leitura pode ajudar a reduzir o desperdício e promover a reutilização de recursos.</li>
+
+                    <li><span>Produtos Digitais Sustentáveis</span> Focar em produtos digitais, como e-books e audiolivros, reduz a necessidade de materiais físicos, contribuindo para a preservação ambiental. No entanto, é importante também considerar a sustentabilidade na infraestrutura digital utilizada.</li>
+                </ol>
+            </p>
+            <h1>IMPORTÂNCIA DE SEGUIR AS LEIS DO TRABALHO</h1>
+            <p>[
+                <ol type = "I">
+                    <li><span>Cumprimento Legal</span>Obedecer às leis trabalhistas é uma obrigação. Não fazê-lo pode resultar em multas, processos judiciais e até a interrupção das atividades da empresa.</li>
+
+                    <li><span>Proteção dos Direitos dos Trabalhadores</span>As leis trabalhistas garantem que os trabalhadores recebam salários justos, tenham jornadas de trabalho adequadas e condições seguras. Isso assegura que eles sejam tratados com justiça e dignidade.</li>
+
+                    <li><span>Reputação da Empresa</span> Empresas que respeitam os direitos trabalhistas ganham uma melhor reputação no mercado. Isso pode atrair mais clientes, parceiros de negócios e talentos, além de fortalecer a imagem da marca.</li>
+
+                    <li><span>Motivação e Produtividade</span>Funcionários que têm seus direitos respeitados são mais motivados e produtivos. Isso melhora a qualidade do serviço e pode aumentar as vendas e a satisfação do cliente.</li>
+
+                    <li><span>Redução de Turnover</span>O respeito às leis trabalhistas ajuda a reter talentos, reduzindo a rotatividade de funcionários. Contratar e treinar novos empregados é caro e consome tempo, por isso manter uma equipe estável é vantajoso.</li>
+
+                    <li><span>Evitar Conflitos e Litígios</span>Cumprir as leis trabalhistas minimiza o risco de conflitos e processos judiciais. Isso protege a empresa de custos legais e das distrações que esses problemas podem causar.</li>
+
+                    <li><span>Evitar Conflitos e Litígios</span> Seguir as leis trabalhistas mostra que a empresa se preocupa com a comunidade e assume uma postura de responsabilidade social. Isso melhora a percepção pública e fortalece sua posição no mercado.</li>
+                    
+                </ol>
+            </p>
             <h1>NOSSA MATRIZ SWOT</h1>
+            <h1>NOSSO ORGANOGRAMA</h1>
+            <h1>ESTRATÉGIA DE MARKETING</h1>
+            <ul type = "dise">
+                <li><span>Estratégia de Produto</span>Catálogo de Livros: Ampliar a variedade de livros, incluindo best-sellers, lançamentos, e obras acadêmicas.<br/>Parceria com o Governo: Aproveitar programas educacionais e de incentivo à leitura para promover livros didáticos e literários.</li>
+                <li><span>Estratégia de Preço</span>Competitivo**: Manter preços competitivos em comparação com outras lojas online.<br/>Oferecer descontos periódicos, especialmente em datas comemorativas e durante campanhas governamentais.</li>
+                <li><span>Estratégia de Distribuição</span>Frete Grátis: Continuar a oferecer frete grátis para todo o Brasil.<br/>Parcerias Logísticas: Estabelecer parcerias com empresas de logística para otimizar os custos e tempos de entrega.</li>
+                <li><span> Estratégia de Comunicação</span>Marketing Digital: Utilizar SEO, Google Ads, e redes sociais (Instagram, Facebook, TikTok) para alcançar um público mais amplo.<br/>
+                    Email Marketin: Criar campanhas de email marketing segmentadas para diferentes públicos.<br/>
+                    Campanhas de Influenciadores: Parcerias com influenciadores literários e educacionais para promover os livros.<br/>
+                    Eventos e Webinars: Organizar eventos online com autores, webinars sobre temas educacionais e literários.<br/></li>
+            </ul>
         </section>
         <footer id = "rodape">
             <h1>Created By <a href="https://www.instagram.com/ph_dev_/" target="_blank">PHDEV&copy;</a> 2024&trade;</h1>
