--- a/sobre.html
+++ b/sobre.html
@@ -25,11 +25,11 @@
         </header>
 
         <section id = "sessao-sobre">
-            <h1>QUEM SOMOS?</h1>
+            <h1>QUEM SOMOS?<i class="bi bi-building-fill"></i></h1>
             <p>A BookLux é uma empresa inovadora no ramo de venda de livros, que possui um
                 modelo de negócio único. Somos uma equipe apaixonada por literatura e comprometida em
                 proporcionar acesso amplo e democrático aos livros, promovendo a leitura e o conhecimento em todo o Brasil.</p>
-            <h1>NOSSO OBJETIVO</h1>
+            <h1>NOSSO OBJETIVO<i class="bi bi-check2-circle"></i></h1>
             <p>Nosso principal objetivo é facilitar o acesso à leitura para todos os brasileiros, oferecendo
                 uma ampla variedade de livros de diferentes gêneros e temáticas, com frete grátis para todo o
                 país. Acreditamos que a leitura é fundamental para o desenvolvimento pessoal e intelectual
@@ -39,7 +39,7 @@
                 diferentes gêneros, temáticas e níveis de leitura. Queremos atender às necessidades e
                 interesses de todos os leitores, desde estudantes em busca de materiais acadêmicos até
                 amantes da literatura em busca de obras clássicas e contemporâneas</p>
-            <h1>DIFERENCIAL</h1>
+            <h1>DIFERENCIAL<i class="bi bi-exclamation-circle-fill"></i></h1>
             <p>O diferencial da BookLux está na nossa missão de democratizar o acesso à leitura no
                 Brasil. Queremos ir além de ser apenas uma loja de livros online, e nos esforçamos para
                 oferecer uma experiência única aos nossos clientes. Aqui estão alguns dos nossos
@@ -66,17 +66,17 @@
                     recursos para apoiar projetos sociais relacionados à leitura, colaborando com iniciativas que promovem a inclusão literária em comunidades carentes, escolas e bibliotecas.</li>
                 </ol>
             </p>
-            <h1>MISSÃO</h1>
+            <h1>MISSÃO<i class="bi bi-bar-chart-line-fill"></i></h1>
             <p>A missão da BookLux é democratizar o acesso à leitura no Brasil, proporcionando uma
                 experiência de compra conveniente, variedade de títulos e promovendo projetos sociais
                 relacionados à leitura. Buscamos inspirar e transformar vidas por meio do poder dos livros,
                 incentivando a educação, a imaginação e o conhecimento.</p>
-            <h1>VISÃO</h1>
+            <h1>VISÃO<i class="bi bi-eye-fill"></i></h1>
             <p>Nossa visão é ser a principal referência no mercado de venda de livros online,
                 reconhecida pelo compromisso com a qualidade, diversidade, acessibilidade e pelo apoio a
                 projetos sociais. Queremos ser a escolha preferida dos leitores brasileiros, tornando a leitura
                 uma atividade acessível para todos.</p>
-            <h1>VALORES</h1>
+            <h1>VALORES<i class="bi bi-award-fill"></i></h1>
             <p>
                 <ol type = "I">
                     <li><span>Acesso à leitura:</span> Acreditamos que a leitura é um direito fundamental de todos.
@@ -99,7 +99,7 @@
                     e leitura dos nossos clientes. Investimos em tecnologia e inovação para oferecer recursos avançados e uma jornada de leitura completa.</li>
                 </ol>
             </p>
-            <h1>IMPORTÂNCIA DA RESPONSABILIDADE SOCIOAMBIENTAL</h1>
+            <h1>IMPORTÂNCIA DA RESPONSABILIDADE SOCIOAMBIENTAL<i class="bi bi-tree-fill"></i></h1>
             <p>
                 <ol type = "I">
                     <li><span>Redução do Impacto Ambiental</span> Mesmo sem a produção de livros físicos, a empresa pode adotar práticas que minimizem seu impacto ambiental. Isso inclui usar servidores e centros de dados que sejam eficientes em termos de energia, promover o uso de energia renovável e compensar as emissões de carbono das operações digitais e logísticas.</li>
@@ -119,7 +119,7 @@
                     <li><span>Produtos Digitais Sustentáveis</span> Focar em produtos digitais, como e-books e audiolivros, reduz a necessidade de materiais físicos, contribuindo para a preservação ambiental. No entanto, é importante também considerar a sustentabilidade na infraestrutura digital utilizada.</li>
                 </ol>
             </p>
-            <h1>IMPORTÂNCIA DE SEGUIR AS LEIS DO TRABALHO</h1>
+            <h1>IMPORTÂNCIA DE SEGUIR AS LEIS DO TRABALHO<i class="bi bi-journals"></i></h1>
             <p>[
                 <ol type = "I">
                     <li><span>Cumprimento Legal</span>Obedecer às leis trabalhistas é uma obrigação. Não fazê-lo pode resultar em multas, processos judiciais e até a interrupção das atividades da empresa.</li>
@@ -138,9 +138,9 @@
                     
                 </ol>
             </p>
-            <h1>NOSSA MATRIZ SWOT</h1>
-            <h1>NOSSO ORGANOGRAMA</h1>
-            <h1>ESTRATÉGIA DE MARKETING</h1>
+            <h1>NOSSA MATRIZ SWOT<i class="bi bi-grid"></i></h1>
+            <h1>NOSSO ORGANOGRAMA<i class="bi bi-diagram-3-fill"></i></h1>
+            <h1>ESTRATÉGIA DE MARKETING<i class="bi bi-ethernet"></i></h1>
             <ul type = "dise">
                 <li><span>Estratégia de Produto</span><br/>Catálogo de Livros: Ampliar a variedade de livros, incluindo best-sellers, lançamentos, e obras acadêmicas.<br/>Parceria com o Governo: Aproveitar programas educacionais e de incentivo à leitura para promover livros didáticos e literários.</li>
                 <li><span>Estratégia de Preço</span><br/>Competitivo: Manter preços competitivos em comparação com outras lojas online.<br/>Oferecer descontos periódicos, especialmente em datas comemorativas e durante campanhas governamentais.</li>
